[gd_scene load_steps=2 format=2]

[ext_resource path="res://Code/SceneManager.gd" type="Script" id=1]

[node name="SceneManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG_Image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Music_Looper" type="AudioStreamPlayer" parent="."]

[node name="SFX_Player" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Speaker_Image" type="Sprite" parent="."]

[node name="Speaker_Text" type="Label" parent="."]
margin_top = 424.0
margin_right = 1023.0
margin_bottom = 596.0
text = "test"
